# SmoLoRA

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  PREPARATION_SUMMARY.md  README.md  dev-requirements.txt  local_text.py  prepare_dataset.py  pyproject.toml  requirements.txt  setup-dev.sh  smoLoRA.py  test_smolora.py  usage.py
.github/workflows/: pre-commit.yml
docs/: README.md  api-reference.md  architecture.md  core-components.md  customization-guide.md  dataset-handling.md  developer-guide.md  developer-notes.md  development-guide.md  model-management.md  testing-strategy.md  training-pipeline.md  user-guide.md
docs/archive/: core-components.md  dataset-handling.md  testing-strategy.md
examples/: __init__.py  usage.py
scripts/: dev-commands.sh  setup-dev.sh
src/: __init__.py
src/smolora/: __init__.py  core.py  dataset.py
src/smolora.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  test_smolora.py
